Initial commit: Organized project structure

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,15 @@
 # Renomeie este arquivo para .env e preencha com suas credenciais reais
 
 # Configurações do banco de dados MySQL
-DB_SERVER=servidor
+DB_SERVER=your_server_name
 DB_PORT=1234
-DB_USER=usuario
-DB_PASSWORD=senha* 
+DB_USER=your_username
+DB_PASSWORD=your_password
+DB_DRIVER=ODBC+Driver+17+for+SQL+Server
+
+# Application settings
+DEBUG=False
+LOG_LEVEL=INFO
+
+# Model settings
+MODEL_PATH=models/best_model.pkl 
