--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,13 @@ pandas==2.0.1
 matplotlib==3.7.2
 seaborn==0.12.2
 scikit-learn==1.3.0
-pyodbc==4.0.39
+xgboost==2.0.0
+joblib==1.3.1
 python-dotenv==1.0.0
-joblib==1.3.1 
+pytest==7.4.0
+black==23.7.0
+flake8==6.1.0
+mypy==1.5.1
+pylint==2.17.4
+pandas-profiling==3.6.6
+missingno==0.5.2 
